<resources>
    <string name="app_name" translatable="false">TicTacTurn</string>

    <!-- Activity titles, obviously -->
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_game">TicTacTurn</string>
    <string name="title_activity_game_ended">game ended</string>
    <string name="title_activity_game_replay">moves replayed</string>
    <string name="title_activity_tutorial">tutorial</string>
    <string name="title_activity_licenses">open source licenses</string>
    <string name="title_activity_about">about</string>

    <!-- Logo -->
    <string name="tic_tac" translatable="false">tictac</string>
    <string name="turn" translatable="false">turn</string>
    <string name="tt" translatable="false">tt</string>
    <string name="t" translatable="false">t</string>

    <!-- Main menu -->
    <string name="menu_online">online game</string>
    <string name="menu_offline">local game</string>
    <string name="settings">settings</string>

    <!-- Local game menu -->
    <string name="new_bot_game">new single-player</string>
    <string name="new_standard_game">new hot seat</string>
    <string name="continue_game">continue</string>

    <!-- Online game menu -->
    <string name="active">active games</string>
    <string name="new_network_game">start new</string>

    <!-- Settings -->
    <string name="pick_theme">theme</string>
    <string name="playservices_signedin">signout from google</string>
    <string name="playservices_signedout">signin to google</string>
    <string name="licenses">licenses</string>
    <string name="feedback">feedback</string>

    <!-- Game board-->
    <string name="board_player1">player 1:</string>
    <string name="board_player2">player 2:</string>
    <string name="board_your_turn">your turn:</string>
    <string name="board_opponents_turn">opponent\'s turn:</string>
    <string name="board_bots_turn">bot\'s turn:</string>
    <string name="board_winner">winner:</string>
    <string name="board_draw">draw!</string>
    <string name="board_replay">replay:</string>

    <!-- Bot game-->
    <string name="difficulty">difficulty:</string>
    <string name="choose_symbol">choose your symbol</string>
    <string name="button_symbol_X_description">choose X</string>
    <string name="button_symbol_O_description">choose O</string>

    <!-- Online game -->
    <string name="sign_in_error">Could not sign in due to connection error</string>
    <string name="not_available">This feature is not available in this version of the game.</string>

    <!-- After game menu -->
    <string name="game_ended">game ended!</string>
    <string name="play_again">play again</string>
    <string name="replay_moves">replay moves</string>
    <string name="show_game_end">show game end</string>

    <!-- Tutorial -->
    <string name="tutorial_figures">You can play either noughts or crosses. Cross player moves first.</string>
    <string name="tutorial_rotations">When quadrant\'s arrows are active, you can rotate it instead of marking a field</string>
    <string name="tutorial_goals">Try to put 5 of your marks straight in line to win the game</string>
    <string name="tutorial_standard">Play with a friend on one device</string>
    <string name="tutorial_network">or play online</string>
    <string name="tutorial_bot">or play with bot</string>
    <string name="tutorial_image_description">Image that shows game</string>
    <string name="tutorial_skip">skip</string>
    <string name="tutorial_next">next</string>
    <string name="tutorial_done">done</string>

    <!-- Licenses -->
    <string name="credits_spray" translatable="false">spray</string>
    <string name="credits_font" translatable="false">comfortaa</string>

    <!-- About -->
    <string name="enves" translatable="false">enves</string>
    <string name="created_by">created by</string>
    <string name="app_description_1">Old classic with a twist… literally! 6x6 version of TicTacToe where you can turn parts of the board around.</string>
    <string name="app_description_2">Exercise your brain while playing solo or challenge your friends to a mind-duel - hot seat or online. Enjoy customizable flat design and several levels of bot\'s difficulty.</string>
    <string name="app_description_3">Will you become the ultimate TicTacTurn master?</string>
    <string name="app_copyright" translatable="false">Copyright © enves.pl</string>
    <string name="app_authors">Authors: %s</string>
    <string name="app_license_1" translatable="false">Disclaimer of warranties. To the extent possible, the authors or copyright holders offer this software as-is and as-available, and make no representations or warranties of any kind concerning this software, whether express, implied, statutory, or other. This includes, without limitation, warranties of title, merchantability, fitness for a particular purpose, non-infringement, absence of latent or other defects, accuracy, or the presence or absence of errors, whether or not known or discoverable.</string>
    <string name="app_license_2" translatable="false">Limitation of liability. To the extent possible, in no event will the authors or copyright holders be liable to You on any legal theory (including, without limitation, negligence) or otherwise for any direct, special, indirect, incidental, consequential, punitive, exemplary, or other losses, costs, expenses, or damages arising out of the use or inability to use this software, even if the authors or copyright holders had been advised of the possibility of such losses, costs, expenses, or damages.</string>
    <string name="app_license_3" translatable="false">The disclaimer of warranties and limitation of liability provided above shall be interpreted in a manner that, to the extent possible, most closely approximates an absolute disclaimer and waiver of all liability.</string>
    <string name="app_license_4" translatable="false">Safety-Critical Systems. This software is not intended for use with life-critical or safety-critical systems, such as use in operation of medical equipment, automated transportation systems, autonomous vehicles, aircraft or air traffic control, nuclear facilities, manned spacecraft, or military use in connection with live combat. However, this restriction will not apply in the event of the occurrence (certified by the World Health Organization or successor body) of a widespread viral infection transmitted via bites or contact with bodily fluids that causes human corpses to reanimate and seek to consume living human flesh, blood, brain or nerve tissue and is likely to result in the fall of organized civilization.</string>

    <!-- Misc -->
    <string name="nav_prompt" translatable="false">&gt;</string>
    <string name="admob_test_banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
</resources>
