<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|clip_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/text_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tt"
            android:textSize="100dp" />

        <TextView
            android:id="@+id/text_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_tt"
            android:layout_toRightOf="@+id/text_tt"
            android:rotation="180"
            android:text="@string/t"
            android:textSize="100dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/text_tic_tac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac"
            android:textSize="33dp" />

        <TextView
            android:id="@+id/text_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_tic_tac"
            android:layout_toRightOf="@+id/text_tic_tac"
            android:rotation="180"
            android:text="@string/turn"
            android:textSize="33dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />
</LinearLayout>