<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/button_create_bot_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_create_bot"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_create_bot_prompt"
            android:layout_toRightOf="@+id/button_create_bot_prompt"
            android:text="@string/new_bot_game" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/button_create_standard_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_create_standard"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_create_standard_prompt"
            android:layout_toRightOf="@+id/button_create_standard_prompt"
            android:text="@string/new_standard_game" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/button_continue_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_continue"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_continue_prompt"
            android:layout_toRightOf="@+id/button_continue_prompt"
            android:text="@string/continue_game" />
    </RelativeLayout>
</LinearLayout>