<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="15dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/text_pick_theme_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <TextView
            android:id="@+id/text_pick_theme"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text_pick_theme_prompt"
            android:layout_toRightOf="@+id/text_pick_theme_prompt"
            android:text="@string/pick_theme" />
    </RelativeLayout>

    <pl.enves.ttr.utils.themes.ThemePicker
        android:id="@+id/view_theme_picker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/button_tutorial_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_tutorial"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_tutorial_prompt"
            android:layout_toRightOf="@+id/button_tutorial_prompt"
            android:text="@string/title_activity_tutorial" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/button_about_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_about"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_about_prompt"
            android:layout_toRightOf="@+id/button_about_prompt"
            android:text="@string/title_activity_about" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/button_licenses_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_licenses"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_licenses_prompt"
            android:layout_toRightOf="@+id/button_licenses_prompt"
            android:text="@string/licenses" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/button_feedback_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_feedback"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_feedback_prompt"
            android:layout_toRightOf="@+id/button_feedback_prompt"
            android:text="@string/feedback" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view_settings"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_test_banner_ad_unit_id" />
    </FrameLayout>
</LinearLayout>