<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/button_active_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_active"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_active_prompt"
            android:layout_toRightOf="@+id/button_active_prompt"
            android:text="@string/active" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/button_create_network_prompt"
            style="@style/ButtonStyle"
            android:text="@string/nav_prompt" />

        <Button
            android:id="@+id/button_create_network"
            style="@style/ButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button_create_network_prompt"
            android:layout_toRightOf="@+id/button_create_network_prompt"
            android:text="@string/new_network_game" />
    </RelativeLayout>
</LinearLayout>