<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    style="@style/FiveTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/tutorial_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/five_background"
        android:paddingBottom="64dp"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#40000000"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/tutorial_skip_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:text="@string/tutorial_skip"
            android:textAllCaps="false"
            android:textColor="@color/five_outer1"/>

        <Button
            android:id="@+id/tutorial_next_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:text="@string/tutorial_next"
            android:textAllCaps="false"
            android:textColor="@color/five_outer1"/>

        <Button
            android:id="@+id/tutorial_done_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:text="@string/tutorial_done"
            android:textAllCaps="false"
            android:textColor="@color/five_outer1"
            android:visibility="gone"/>
    </FrameLayout>
</FrameLayout>